Fri Oct  6 22:03:59 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Remove ##DOS!include of config/windows.in.
		config/windows.in is now included by wconfig.

Mon Sep 25 16:57:16 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Tue Sep 05 22:10:34 1995   Chris Provenzano (proven@mit.edu)

        * f_kdc_rq.c : Remove krb5_enctype references, and replace with
                krb5_keytype where appropriate

Fri Jun  9 19:34:18 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Fri May 26 20:20:10 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for building shared libraries.

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.[ch]: removed unneeded INTERFACE from non-api functions.

Fri Mar 17 19:45:01 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (LDFLAGS):  Elim duplicate.

Wed Mar 15 12:21:24 1995 Keith Vetter (keithv@fusion.com)

	* f_cksum.c renamed to f_chksum.c because of module name conflicts
	   with crypto/des/f_cksum.
	* Makefile.in: reflected above name change.

Tue Mar 7 21:40:18 1995 Keith Vetter (keithv@fusion.com)

	* Makefile.in: changed library name for the PC.

Tue Mar  7 19:53:33 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: take out ISODE_DEFS, ISODE_INCLUDE.

Wed Mar 1 16:00:00 1995 Keith Vetter (keithv@fusion.com)

	* f_princ.h: changed int to krb5_int32 for the PC.

Tue Feb 28 00:38:44 1995  John Gilmore  (gnu at toad.com)

	* *.c:  Avoid <krb5/...> includes.

Tue Feb 21 23:39:19 1995  Theodore Y. Ts'o  (tytso@dcl)

	* f_cred_enc.c (krb5_free_cred_enc_part): Remove call to xfree at
		the end.  This routine only frees the contents of
		the cred_enc_part structure.

Tue Feb 21 0:1:55 1995 Keith Vetter (keithv@fusion.com)

	* Every C file (*.c): added windows INTERFACE keyword
        * Makefile.in: made to work for PC
