@@ -1,3 +1,8 @@
+Wed Nov  8 17:51:51 1995  Theodore Y. Ts'o  <tytso@dcl>
+
+	* f_einfo.c (krb5_free_etype_info): Added new function to free a
+		krb5_etype_info structure.
+
 Fri Oct  6 22:03:59 1995  Theodore Y. Ts'o  <tytso@dcl>
 
 	* Makefile.in: Remove ##DOS!include of config/windows.in.
